# Hackathon1

./: .gitignore  vercel.json
.claude/: settings.local.json
.specify/memory/: constitution.md
book/docs/capstone/: autonomous-humanoid.md
book/docs/module-1-ros2/: chapter-1.3-action-service-architecture.md
book/docs/module-2-digital-twin/: chapter-2.1-gazebo-simulation.md
book/docs/module-3-ai-brain/: chapter-3.1-isaac-sim-integration.md
book/docs/module-4-vla/: chapter-4.3-capstone-integration.md
book/docusaurus/: Dockerfile  docusaurus.config.js  package-lock.json  package.json  sidebars.js  vercel.json
book/docusaurus/docs/: intro.md
book/docusaurus/docs/module-1-ros2/: chapter-1.1-architecture.md  chapter-1.2-sensor-integration.md
book/docusaurus/docs/module-2-digital-twin/: chapter-2.2-unity-visualization.md  chapter-2.3-sim-to-real-transfer.md
book/docusaurus/docs/module-4-vla/: chapter-4.1-vision-language-integration.md  chapter-4.2-action-generation.md
book/docusaurus/src/css/: custom.css
book/scripts/: deploy_jetson.sh  run_simulation.sh  setup_dev.sh
book/src/gazebo_models/: CMakeLists.txt  README.md  gazebo_model_services.py  gazebo_ros_spawner.py  gazebo_simulation_bridge.py  joint_state_publisher.py  package.xml  robot_state_publisher.py
book/src/gazebo_models/config/: humanoid_robot_control.yaml
book/src/gazebo_models/launch/: spawn_humanoid_robot.launch.py
book/src/gazebo_models/models/humanoid_robot/: humanoid_robot.urdf
book/src/gazebo_models/worlds/: simple_room.world
book/src/isaac_ros_examples/: isaac_sim_bridge.py  perception_pipeline.py
book/src/ros2_examples/: CMakeLists.txt  package.xml
book/src/ros2_examples/basic_communication/: CMakeLists.txt  README.md  action_example.py  package.xml  publisher_subscriber_example.py  service_example.py  setup.py
book/src/ros2_examples/basic_communication/launch/: action_launch.py  publisher_subscriber_both_launch.py  publisher_subscriber_launch.py  service_launch.py  system_initialization_launch.py
book/src/ros2_examples/basic_communication/lifecycle/: README.md  lifecycle_launch.py  lifecycle_node_example.py
book/src/ros2_examples/basic_communication/params/: robot_params.yaml
book/src/unity_scenes/: ProjectSettings.json  teleop_interface.py  unity_bridge_node.py  unity_services.py  unity_teleop_action.py  unity_teleop_action_server.py  visualization_node.py
book/src/vla_integration/: action_generator.py  llm_interface.py  vision_language_fusion.py
history/prompts/: 1-physical-ai-robotics.plan.prompt.md  1-physical-ai-robotics.spec.prompt.md  1-physical-ai-robotics.tasks.prompt.md
history/prompts/constitution/: 1-physical-ai-book-constitution.constitution.prompt.md  2-ai-spec-driven-book-creation-constitution-update.constitution.prompt.md
specs/1-physical-ai-robotics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-physical-ai-robotics/checklists/: requirements.md
specs/1-physical-ai-robotics/contracts/: api-contracts.yaml
(+46 files in other folders)
